; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/cell/spufs/extr_file.c_spufs_mem_release.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/cell/spufs/extr_file.c_spufs_mem_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.file = type { i32 }
%struct.spufs_inode_info = type { i32, %struct.spu_context* }
%struct.spu_context = type { i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inode*, %struct.file*)* @spufs_mem_release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @spufs_mem_release(%struct.inode* %0, %struct.file* %1) #0 {
  %3 = alloca %struct.inode*, align 8
  %4 = alloca %struct.file*, align 8
  %5 = alloca %struct.spufs_inode_info*, align 8
  %6 = alloca %struct.spu_context*, align 8
  store %struct.inode* %0, %struct.inode** %3, align 8
  store %struct.file* %1, %struct.file** %4, align 8
  %7 = load %struct.inode*, %struct.inode** %3, align 8
  %8 = call %struct.spufs_inode_info* @SPUFS_I(%struct.inode* %7)
  store %struct.spufs_inode_info* %8, %struct.spufs_inode_info** %5, align 8
  %9 = load %struct.spufs_inode_info*, %struct.spufs_inode_info** %5, align 8
  %10 = getelementptr inbounds %struct.spufs_inode_info, %struct.spufs_inode_info* %9, i32 0, i32 1
  %11 = load %struct.spu_context*, %struct.spu_context** %10, align 8
  store %struct.spu_context* %11, %struct.spu_context** %6, align 8
  %12 = load %struct.spu_context*, %struct.spu_context** %6, align 8
  %13 = getelementptr inbounds %struct.spu_context, %struct.spu_context* %12, i32 0, i32 0
  %14 = call i32 @mutex_lock(i32* %13)
  %15 = load %struct.spufs_inode_info*, %struct.spufs_inode_info** %5, align 8
  %16 = getelementptr inbounds %struct.spufs_inode_info, %struct.spufs_inode_info* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = add nsw i32 %17, -1
  store i32 %18, i32* %16, align 8
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %23, label %20

20:                                               ; preds = %2
  %21 = load %struct.spu_context*, %struct.spu_context** %6, align 8
  %22 = getelementptr inbounds %struct.spu_context, %struct.spu_context* %21, i32 0, i32 1
  store i32* null, i32** %22, align 8
  br label %23

23:                                               ; preds = %20, %2
  %24 = load %struct.spu_context*, %struct.spu_context** %6, align 8
  %25 = getelementptr inbounds %struct.spu_context, %struct.spu_context* %24, i32 0, i32 0
  %26 = call i32 @mutex_unlock(i32* %25)
  ret i32 0
}

declare dso_local %struct.spufs_inode_info* @SPUFS_I(%struct.inode*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
